syntax = "proto3";

package gitops_core.v1;

option go_package = "github.com/weaveworks/weave-gitops/core/api";

message Interval {
    int64 hours = 1;
    int64 minutes = 2;
    int64 seconds = 3;
}

enum Kind {
    GitRepository  = 0;
    Bucket         = 1;
    HelmRepository = 2;
    HelmChart      = 3;
    Kustomization  = 4;
    HelmRelease    = 5;
    Cluster        = 6;
    OCIRepository  = 7;
    Provider       = 8;
    Alert          = 9;
};

enum HelmRepositoryType {
    Default = 0;
    OCI     = 1;
};

message ObjectRef {
    string         kind      = 1;
    string         name      = 2;
    string         namespace = 3;
    string         clusterName = 4;
}

message Condition {
    string type = 1;
    string status = 2;
    string reason = 3;
    string message = 4;
    string timestamp = 5;
}

message GitRepositoryRef {
    string branch = 1;
    string tag = 2;
    string semver = 3;
    string commit = 4;
}

// GroupVersionKind represents an objects Kubernetes API type data
message GroupVersionKind {
    string group   = 1;
    string kind    = 2;
    string version = 3;
}

message NamespacedObjectReference {
    string name      = 1;
    string namespace = 2;
}

message Object {
    string   payload                    = 1;
    string   clusterName                = 2;
    string   tenant                     = 3;
    string   uid                        = 4;
    repeated GroupVersionKind inventory = 5;
}

message Deployment {
    string   name                 = 1;
    string   namespace            = 2;
    repeated Condition conditions = 3;
    repeated string images        = 4;
    bool     suspended            = 5;
    string   clusterName          = 6;
    string   uid                  = 7;
}

message Crd {
    message Name {
        string plural = 1;
        string group  = 2;
    }
    Name     name                 = 1;
    string   version              = 2;
    string   kind                 = 3;
    string   clusterName          = 4;
    string   uid                  = 5;
}

// UnstructuredObject is a Kubernetes object of an unknown type
message UnstructuredObject {
    GroupVersionKind groupVersionKind     = 1;
    string           name                 = 2;
    string           namespace            = 3;
    string           uid                  = 4;
    string           status               = 5;
    repeated         Condition conditions = 6;
    bool             suspended            = 7;
    string           clusterName          = 8;
    repeated         string images        = 9;
}

message Namespace {
  string name = 1;
  string status = 2;
  map<string, string> annotations = 3;
  map<string, string> labels = 4;
  string clusterName = 5;
}

message Event {
    string type      = 1;
    string reason    = 2;
    string message   = 3;
    string timestamp = 4;
    string component = 5;
    string host      = 6;
    string name      = 7;
    string uid       = 8;
}
